--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "homepage": "https://evgeniy210191.github.io/goit-js-hw-11/",
   "scripts": {
-    "start": "parcel src/*.html",
+    "start": "parcel src/*.html, --port 3000",
     "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
   },
   "repository": {
