--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "2.0.0",
   "description": "",
   "homepage": "https://evgeniy210191.github.io/goit-js-hw-11/",
+  "source": "src/index.html",
   "scripts": {
-    "start": "parcel src/*.html, --port 3000",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-11/"
+    "start": "parcel",
+    "build": "parcel build"
   },
   "repository": {
     "type": "git",
@@ -18,10 +19,12 @@
     "url": "https://github.com/evgeniy210191/goit-js-hw-11"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "modern-normalize": "^1.1.0"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
+    "buffer": "^6.0.3",
     "parcel": "^2.6.0",
     "parcel-reporter-clean-dist": "^1.0.4",
     "posthtml-include": "^1.7.4"
